user.css
/* ... */
.connect-device-list-item:last-child {
  margin: 0 8px 8px;
}

.connect-device-list-item:focus,
.connect-device-list-item:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.05);
}

.connect-header {
  display: none;
}

.connect-device-list-item--active,
.connect-device-list-item--active .connect-device-list-item__icon,
.connect-device-list-item--active .connect-device-list-item__device-subtitle {
  color: var(--spice-subtext);
}

.main-connectBar-connectBar {
  background-color: var(--spice-accent) !important;
  border-radius: 4px;
  height: 28px;
  width: 200px;
  padding: 8px;
  position: absolute;
  right: 6px;
  bottom: 106px;
  color: var(--spice-alt-text);
  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) !important;
}

.main-connectBar-connectBar:after {
  border-bottom: none !important;
}

.main-connectBar-connectBar .icon,
.main-connectBar-connectBar .hDgDGI {
  margin: 0px;
  margin-right: 8px;
}

/* player */

.Root__now-playing-bar {
  background: rgba(var(--spice-rgb-player), .75);
  padding-right: 6px;
  margin: 0px 13px 13px 13px;
  width: calc(100% - 26px);
  /* 100% - side padding   */
  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) !important;
  border-radius: var(--border-radius-1);
  border: 1px solid var(--spice-player-border);
  backdrop-filter: blur(50px) !important;
  position: fixed;
  bottom: 0;
  left: 0;
}

.main-nowPlayingBar-container {
  background: transparent;
  border-radius: var(--border-radius-1);

}

.GD2gbRtcs5dOjMGAM_Y4 {
  border: 0px;
  background: none;
}

.main-nowPlayingBar-container {
  background: transparent;
  border-top: 0px;
  border-radius: var(--border-radius-1) !important;
}

.now-playing--cover-expanded {
  transform: translateX(0px) !important;
  border-radius: var(--border-radius-1) !important;

}

.x-progressBar-progressBarBg {
  background-color: rgba(var(--spice-rgb-text), 0.2);
  background-blend-mode: luminosity;
}

.playback-bar,
.progress-bar,
.progress-bar__fg_wrapper {
  --fg-color: var(--spice-accent) !important;
  --is-active-fg-color: var(--spice-accent) !important;
  --bg-color: var(--spice-player-bar-bg);
}

.prog-tooltip {
  width: 140px;
  display: none;
}

.progress-bar__slider {
  background-color: var(--spice-selected-row) !important;
  border: 6px solid var(--spice-selected-row);
  box-shadow: 0 0 3px 0 var(--spice-player-bar-shadow) !important;
  box-sizing: content-box !important;
  width: 8px;
  height: 8px;
  opacity: 1 !important;
  display: block;
  margin-left: -10px;
}

.progress-bar__slider:after {
  content: "";
  position: absolute;
  width: 10px;
  height: 10px;
  background-color: var(--spice-accent);
  top: 50%;
  left: 50%;
  translate: -50% -50%;
  border-radius: 50%;
  transition: transform 300ms cubic-bezier(0.1, 0.9, 0.2, 1);
}

.progress-bar__slider:hover:after {
  transform: scale(1.25);
}

.progress-bar__slider:active:after {
  transform: scale(0.8);
}

.main-nowPlayingWidget-nowPlaying>.ellipsis-one-line,
.main-trackInfo-container {
  margin-left: 74px;
  border-radius: var(--border-radius-1) !important;
}

.cover-art {
  background-color: transparent !important;
}

.main-coverSlotExpanded-container {
  position: fixed;
  top: calc(100% - 320px);
  left: calc(100% - 220px);
  width: 200px;
  height: 200px;
  visibility: hidden;
  transform-origin: center;
  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) !important;
  animation: 1s coverExpandedIn;
  animation-fill-mode: forwards;
  background: none;
  border-radius: var(--border-radius-1) !important;
}

.fsd-button {
  padding-left: 8px !important;
}

.Q4cc5RktWgz2H8_vDrIS {
  display: none;
  border-radius: var(--border-radius-1) !important;
}

@keyframes coverExpandedIn {
  99% {
    visibility: hidden;
  }

  100% {
    visibility: visible;
  }
}

@keyframes coverExpandedOut {
  99% {
    visibility: visible;
  }

  100% {
    visibility: hidden;
  }
}

.rVxzkDirgkuRPv5V1HYF,
.main-coverSlotCollapsed-container {
  position: fixed;
  top: auto;
  left: 0px;
  width: 56px;
  height: 56px;
  visibility: visible;
  z-index: 99999 !important;
  border-radius: var(--border-radius-1) !important;
}

.rVxzkDirgkuRPv5V1HYF,
.cover-art .cover-art-image,
.main-coverSlotCollapsed-container {
  transform-origin: center;
  transition-timing-function: ease-in;
  transition: width 0.5s 0.2s, height 0.5s 0.2s, top 0.3s, left 0.5s, box-shadow 0.5s;
  border-radius: var(--border-radius-1) !important;
  background-color: transparent !important;
}

.rVxzkDirgkuRPv5V1HYF[aria-hidden="true"],
.main-coverSlotCollapsed-container[aria-hidden="true"] {
  left: calc(100vw - 178px);
  top: -245px;
  width: 200px;
  height: 200px;
  visibility: hidden;
  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) !important;
  animation: 1s coverExpandedOut;
  border-radius: var(--border-radius-1) !important;
}

.rVxzkDirgkuRPv5V1HYF[aria-hidden="false"],
.main-coverSlotCollapsed-container[aria-hidden="false"] {
  transition-timing-function: ease-out !important;
  transition: width 0.5s 0.2s, height 0.5s 0.2s, top 0.5s 0.1s, left 0.3s, box-shadow 0.5s !important;
  border-radius: var(--border-radius-1) !important;
}

.rVxzkDirgkuRPv5V1HYF[aria-hidden="true"] .cover-art .cover-art-image,
.main-nowPlayingWidget-coverExpanded .main-coverSlotCollapsed-container .cover-art .cover-art-image {
  width: 200px;
  height: 200px;
  border-radius: var(--border-radius-1) !important;
}

.CoverSlotExpanded__actionButton,
.main-coverSlotCollapsed-expandButton,
.CoverSlotExpanded__actionButton:hover,
.main-coverSlotCollapsed-expandButton:hover,
.kyn0AY4_gXWvbdivdFgP,
.kyn0AY4_gXWvbdivdFgP:hover {
  background-color: var(--spice-card);
  border-radius: var(--border-radius-1) !important;
}

.now-playing-bar .cover-art-image {
  border-radius: var(--border-radius-1);
}

.playback-bar__progress-time,
.main-playbackBarRemainingTime-container,
.playback-bar__progress-time-elapsed {
  color: var(--spice-text) !important;
}
/* ... */

